# omraquote-v1

./: .gitignore  CLAUDE.md  PROMPT_AGENT_OmraVIP.md  README.md  index.html  package-lock.json  package.json
.claude/agents/: database-sqlite.md  pdf-generator.md  qa-financier.md  rust-backend-tauri.md  (+1 more)
database/: schema.sql
docs/: BACKEND_RUST_DETAIL.md  DATABASE_SCHEMA_DETAIL.md  FRONTEND_VUE_DETAIL.md  PDF_GENERATION_DETAIL.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: calculs.rs  clients.rs  compagnies.rs  devis.rs  hebergements.rs  hotels.rs  marge.rs  mod.rs  passagers.rs  pdf.rs  prestations.rs  transferts.rs  validation.rs  vols.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs
src-tauri/src/db/migrations/: 0001_align_tables_models_rust.sql
src-tauri/src/models/: catalogue.rs  client.rs  devis.rs  devise.rs  hebergement.rs  mod.rs  parametres.rs  passager.rs  prestation_vip.rs  segment_vol.rs  transfert.rs
src-tauri/src/services/: agregats_marge.rs  alerte_passeport.rs  calcul_nuitees.rs  calcul_prix.rs  conversion_devises.rs  fonts.rs  generation_pdf.rs  mod.rs  numerotation.rs  validation.rs
src-tauri/src/services/db/: clients.rs  compagnies.rs  devis.rs  hebergements.rs  hotels.rs  mod.rs  passagers.rs  prestations.rs  transferts.rs  validation.rs  vols.rs
src-tauri/src/utils/: decimal_helpers.rs  mod.rs  query_builder.rs
src-tauri/tests/: pdf_tests.rs  validation_tests.rs
templates/: devis_pdf.typ
(+31 files in other folders)
