[package]
name = "omravip-quotes"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
tauri = { version = "2", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.34", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Typst (PDF) -- optional, activable avec le feature flag pdf-generation
typst = { version = "0.11", optional = true }
typst-pdf = { version = "0.11", optional = true }
comemo = { version = "0.4", optional = true }
ecow = { version = "0.2", optional = true }

[features]
default = []
pdf-generation = ["typst", "typst-pdf", "comemo", "ecow"]

[dev-dependencies]
rust_decimal_macros = "1.34"